# eu4mod

./: .gitignore  README.md  SENDEV_test.txt  compose-dev.yaml
.github/workflows/: build-sensible-development.yml  cwtools-action.yml  github-actions-demo.yml
clausewitz-script-compiler/: Cargo.toml
clausewitz-script-compiler/src/: clausewitz.rs  expression.rs  identifier.rs  main.rs  operator.rs  parser.rs  print_expression.rs  statement.rs
clausewitz-script-compiler/tests/: test.cw  test.rs
clausewitz-script-compiler/tests/mod_template/: mod.toml
docker/: Dockerfile
sensible_development/: sensible development.mod
sensible_development/common/province_triggered_modifiers/: SENDEV_growth_modifier.txt
sensible_development/events/: SENDEV_growth.txt
sensible_development/localisation/: sensible_development_l_english.yml
